k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: articles-app
  labels:
    name: articles-app
